--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html,body{
 /*-----------tooltip-----------*/
 .canvas .custom-tooltip{
     position:absolute;
-    border:1px solid red;
+    border:1px solid deeppink;
     width:150px;
     min-height:10px;
     padding:0px 10px;
@@ -43,5 +43,6 @@ body{
 h1{ font-size:2em;}
 h2{ font-size:1.1em;}
 p{ font-size: .9em;}
+
 
 /*------------svg--------------*/
